Fix overflowing element, fix grammatical error

--- a/src/scss/utilities/_common.scss
+++ b/src/scss/utilities/_common.scss
@@ -21,6 +21,7 @@ body {
   color: $text-color;
   font-family: $font-text;
   font-size: 100%;
+  overflow-x: hidden;
 }
 
 main {
